--- a/angular-js-app/index.html
+++ b/angular-js-app/index.html
@@ -42,76 +42,6 @@
 
   <hr/>
 
-  <!-- /Persoana -->
-  <!-- /resources1 -->
-  <div ng-controller="HomeController" class="container">
-    <h1>Resource 1</h1>
-    <h2>List all resources</h2>
-    <table class="table table-bordered">
-      <tr>
-        <th ng-repeat="key in keys">{{ key }}</th>
-        <th style="width:210px;">Options</th>
-      </tr>
-      <tr ng-repeat="item in persoane.data" data-id="{{ item.id }}">
-        <td>{{ item.id }}</td>
-        <td>{{ item.name }}</td>
-        <td>
-          <a href="">
-            <span class="label label-success">
-              Open
-              <span class="glyphicon glyphicon-folder-open"></span>
-            </span>
-          </a>
-          <button ng-click="setUpdatePerson(item)" class="btn btn-info btn-xs">
-              Edit
-              <span class="glyphicon glyphicon-edit"></span>
-          </a>
-          <button ng-click="deletePersoana(item.id)" class="btn btn-danger btn-xs">
-              Remove
-              <span class="glyphicon glyphicon-remove"></span>
-            </button>
-          </a>
-        </td>
-      </tr>
-    </table>
-
-    <h2>Add new person</h2>
-    <table>
-      <tr>
-        <td>ID</td>
-        <td><input type="text" class="form-control" ng-model="person.id"/></td>
-      </tr>
-      <tr>
-        <td>Name</td>
-        <td><input type="text" class="form-control" ng-model="person.name"/></td>
-      </tr>
-      <tr>
-        <td colspan="2">
-          <button ng-click="addPersoana(person)" class="btn btn-primary btn-xs">Add</button>
-        </td>
-      </tr>
-    </table>
-
-
-    <h2>Edit a person</h2>
-    <table>
-      <tr>
-        <td>ID</td>
-        <td><input type="text" ng-model="editPerson.id"></td>
-      </tr>
-      <tr>
-        <td>Name</td>
-        <td><input type="text" ng-model="editPerson.name"></td>
-      </tr>
-      <tr>
-        <td colspan="2">
-          <button class="btn btn-info btn-xs" ng-click="updatePerson()">
-            Update
-          </button>
-        </td>
-      </tr>
-    </table>
-ope
   <!-- /author -->
   <div class="container" id="authorId" ng-controller = "AutorController">
     <h1>Author</h1>
@@ -399,7 +329,7 @@ ope
           </div>
           <div class="form-group">
             <label for="attribute3">Age</label>
-            <type="text" class="form-control" ng-model="editPlayer.age">
+            <input type="text" class="form-control" ng-model="editPlayer.age">
           </div>
           <button type="submit" class="btn btn-info" ng-click="updatePlayer()">Save</button>
         </form>
@@ -502,7 +432,6 @@ ope
           <button ng-click="addTeam(team)" class="btn btn-success">Add</button>
         </form>
       </div>
-    </div>
   </div>
 
   <div ng-show="isVisible" class="row">
@@ -515,21 +444,20 @@ ope
         <h3>Players</h3>
         <table class="table table-bordered table-striped">
           <tr>
-            <th>ID</th>
-            <th>Name</th>
-            <th>Age</th>
+            <!--<td ng-repeat = "key in keysPlayer">{{ key }}</td>-->
+            <th>Id</th>
+            <th>Nume</th>
+            <th>Varsta</th>
           </tr>
-          <tr ng-repeat="item in readTeam.teamPlayers">
-            <th>{{ item.id }}</th>
-            <th>{{ item.name }}</th>
-            <th>{{ item.age }}</th>
-            <td>
+          <tr ng-repeat="item in teamPlayers.data" data-id="{{ item.id }}">
+            <td>{{ item.id }}</td>
+            <td>{{ item.name }}</td>
+            <td>{{ item.age }}</td>
           </tr>
         </table>
       </div>
     </div>
   </div>
-
 
   <hr/>
     
